--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Dog Bandana Size Finder</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -18,31 +19,32 @@
             const [selectedBreed, setSelectedBreed] = React.useState('');
 
             const commonBreeds = {
-    // Small Breeds (12-16")
-    'Beagle': 'Small',
-    'Cavalier King Charles': 'Small',
-    'French Bulldog': 'Small',
-    'Jack Russell': 'Small',
-    'Miniature Poodle': 'Small',
-    'Pug': 'Small',
-    'Shih Tzu': 'Small',
-    'Small Bulldog': 'Small',
-    'Small Great Dane': 'Small',
-    'Small Rottweiler': 'Small',
-    // Medium Breeds (16-21")
-    'Australian Shepherd': 'Medium',
-    'Border Collie': 'Medium',
-    'Husky': 'Medium',
-    'Standard Poodle': 'Medium',
-    'Vizsla': 'Medium',
-    // Large Breeds (21-25")
-    'German Shepherd': 'Large',
-    'Golden Retriever': 'Large',
-    'Golden Doodle': 'Large',
-    'Doberman': 'Large',
-    'Large Bulldog': 'Large',
-    'Labrador Retriever': 'Large'
-};
+                // Small Breeds (12-16")
+                'Beagle': 'Small',
+                'Cavalier King Charles': 'Small',
+                'French Bulldog': 'Small',
+                'Jack Russell': 'Small',
+                'Miniature Poodle': 'Small',
+                'Pug': 'Small',
+                'Shih Tzu': 'Small',
+                'Small Bulldog': 'Small',
+                'Small Great Dane': 'Small',
+                'Small Rottweiler': 'Small',
+                // Medium Breeds (16-21")
+                'Australian Shepherd': 'Medium',
+                'Border Collie': 'Medium',
+                'Husky': 'Medium',
+                'Standard Poodle': 'Medium',
+                'Vizsla': 'Medium',
+                // Large Breeds (21-25")
+                'German Shepherd': 'Large',
+                'Golden Retriever': 'Large',
+                'Golden Doodle': 'Large',
+                'Doberman': 'Large',
+                'Large Bulldog': 'Large',
+                'Labrador Retriever': 'Large'
+            };
+
             const getSizeByWeight = (w) => {
                 const weight = parseFloat(w);
                 if (weight <= 25) return 'Small';
@@ -58,86 +60,92 @@
             };
 
             return (
-    <div className="w-full max-w-2xl mx-auto p-4">
-        <h2 className="text-xl md:text-2xl font-bold mb-4 text-center">Find Your Perfect Fit</h2>
-        
-        <div className="flex flex-col sm:flex-row gap-2 sm:gap-4 mb-4 justify-center">
-            <button 
-                onClick={() => setMethod('breed')}
-                className={`p-2 sm:p-3 rounded-lg text-sm sm:text-base w-full sm:w-auto ${method === 'breed' ? 'bg-blue-500 text-white' : 'bg-gray-100'}`}
-            >
-                By Breed
-            </button>
-            <button 
-                onClick={() => setMethod('weight')}
-                className={`p-2 sm:p-3 rounded-lg text-sm sm:text-base w-full sm:w-auto ${method === 'weight' ? 'bg-blue-500 text-white' : 'bg-gray-100'}`}
-            >
-                By Weight
-            </button>
-            <button 
-                onClick={() => setMethod('neck')}
-                className={`p-2 sm:p-3 rounded-lg text-sm sm:text-base w-full sm:w-auto ${method === 'neck' ? 'bg-blue-500 text-white' : 'bg-gray-100'}`}
-            >
-                By Neck Size
-            </button>
-        </div>
+                <div className="w-full max-w-2xl mx-auto p-4">
+                    <h2 className="text-xl md:text-2xl font-bold mb-4 text-center">Find Your Perfect Fit</h2>
+                    
+                    <div className="flex flex-col sm:flex-row gap-2 sm:gap-4 mb-4 justify-center">
+                        <button 
+                            onClick={() => setMethod('breed')}
+                            className={`p-2 sm:p-3 rounded-lg text-sm sm:text-base w-full sm:w-auto ${method === 'breed' ? 'bg-blue-500 text-white' : 'bg-gray-100'}`}
+                        >
+                            By Breed
+                        </button>
+                        <button 
+                            onClick={() => setMethod('weight')}
+                            className={`p-2 sm:p-3 rounded-lg text-sm sm:text-base w-full sm:w-auto ${method === 'weight' ? 'bg-blue-500 text-white' : 'bg-gray-100'}`}
+                        >
+                            By Weight
+                        </button>
+                        <button 
+                            onClick={() => setMethod('neck')}
+                            className={`p-2 sm:p-3 rounded-lg text-sm sm:text-base w-full sm:w-auto ${method === 'neck' ? 'bg-blue-500 text-white' : 'bg-gray-100'}`}
+                        >
+                            By Neck Size
+                        </button>
+                    </div>
 
-        <div className="mb-4">
-            {method === 'breed' && (
-                <select 
-                    value={selectedBreed}
-                    onChange={(e) => {
-                        setSelectedBreed(e.target.value);
-                        setSize(commonBreeds[e.target.value]);
-                    }}
-                    className="w-full p-2 sm:p-3 border rounded-lg text-sm sm:text-base"
-                >
-                    <option value="">Select your dog's breed</option>
-                    {Object.keys(commonBreeds).map(breed => (
-                        <option key={breed} value={breed}>{breed}</option>
-                    ))}
-                </select>
-            )}
+                    <div className="mb-4">
+                        {method === 'breed' && (
+                            <select 
+                                value={selectedBreed}
+                                onChange={(e) => {
+                                    setSelectedBreed(e.target.value);
+                                    setSize(commonBreeds[e.target.value]);
+                                }}
+                                className="w-full p-2 sm:p-3 border rounded-lg text-sm sm:text-base"
+                            >
+                                <option value="">Select your dog's breed</option>
+                                {Object.keys(commonBreeds).map(breed => (
+                                    <option key={breed} value={breed}>{breed}</option>
+                                ))}
+                            </select>
+                        )}
 
-            {method === 'weight' && (
-                <input
-                    type="number"
-                    value={weight}
-                    onChange={(e) => {
-                        setWeight(e.target.value);
-                        setSize(getSizeByWeight(e.target.value));
-                    }}
-                    placeholder="Enter weight in lbs"
-                    className="w-full p-2 sm:p-3 border rounded-lg text-sm sm:text-base"
-                />
-            )}
+                        {method === 'weight' && (
+                            <input
+                                type="number"
+                                value={weight}
+                                onChange={(e) => {
+                                    setWeight(e.target.value);
+                                    setSize(getSizeByWeight(e.target.value));
+                                }}
+                                placeholder="Enter weight in lbs"
+                                className="w-full p-2 sm:p-3 border rounded-lg text-sm sm:text-base"
+                            />
+                        )}
 
-            {method === 'neck' && (
-                <input
-                    type="number"
-                    value={neckSize}
-                    onChange={(e) => {
-                        setNeckSize(e.target.value);
-                        setSize(getSizeByNeck(e.target.value));
-                    }}
-                    placeholder="Enter neck size in inches"
-                    className="w-full p-2 sm:p-3 border rounded-lg text-sm sm:text-base"
-                />
-            )}
-        </div>
+                        {method === 'neck' && (
+                            <input
+                                type="number"
+                                value={neckSize}
+                                onChange={(e) => {
+                                    setNeckSize(e.target.value);
+                                    setSize(getSizeByNeck(e.target.value));
+                                }}
+                                placeholder="Enter neck size in inches"
+                                className="w-full p-2 sm:p-3 border rounded-lg text-sm sm:text-base"
+                            />
+                        )}
+                    </div>
 
-        {size && (
-            <div className="bg-green-50 p-3 sm:p-4 rounded-lg">
-                <div className="text-green-600 mb-2">
-                    <span className="font-medium text-sm sm:text-base">Recommended Size:</span>
+                    {size && (
+                        <div className="bg-green-50 p-3 sm:p-4 rounded-lg">
+                            <div className="text-green-600 mb-2">
+                                <span className="font-medium text-sm sm:text-base">Recommended Size:</span>
+                            </div>
+                            <p className="text-base sm:text-lg font-bold text-green-700">{size}</p>
+                            <p className="text-xs sm:text-sm text-green-600 mt-2">
+                                {size === 'Small' && 'Perfect for necks 12-16"'}
+                                {size === 'Medium' && 'Perfect for necks 16-21"'}
+                                {size === 'Large' && 'Perfect for necks 21-25"'}
+                            </p>
+                        </div>
+                    )}
                 </div>
-                <p className="text-base sm:text-lg font-bold text-green-700">{size}</p>
-                <p className="text-xs sm:text-sm text-green-600 mt-2">
-                    {size === 'Small' && 'Perfect for necks 12-16"'}
-                    {size === 'Medium' && 'Perfect for necks 16-21"'}
-                    {size === 'Large' && 'Perfect for necks 21-25"'}
-                </p>
-            </div>
-        )}
-    </div>
-);
+            );
+        }
+
+        ReactDOM.render(<SizeFinder />, document.getElementById('root'));
+    </script>
+</body>
+</html>
